# eda-hospital

./: README.md  build_filename.ipynb  build_filename.py  build_vectordb.ipynb  build_vectordb.py  combine_multipage_files.py  eda.ipynb  filename_translation.json  gh.ipynb  main.py  ocr-pipeline.ipynb  process_html_table.py  pyproject.toml  rag.ipynb  rename_english_files.py  rename_files.py  streamlit_app.py  tes.ipynb  translate_file_content.ipynb  translate_file_content.py  trial.py
assets/output-combined/anesthesia-麻醉/: HA-4-0009(1)認識硬脊膜外自控式減痛_0_res.json  HA-4-0010(1) Understanding Patient-Controlled Intravenous Analgesia_0-ENG.md  HA-4-0011 Invasive Examination and Treatment Anesthesia Precautions_0-ENG.md
assets/output-combined/emergency-急診/: HA-7-0002(1)_995 Patient Medical Rights Notice - Revised 0611_0-ENG.md  HA-7-0003(1)_Precautions for Using Eight-Character Shoulder Straps_0-ENG.md  HA-7-0004(1)_Triangle Bandage Usage Precautions_0-ENG.md  HA-7-0004(1)_三角巾使用注意事項_0_res.json  HA-7-0005(1)_Precautions for Lower Back Pain_0-ENG.md  HA-7-0009(1)_Precautions for Infant Croup_0-ENG.md  HA-7-0009(1)_幼兒哮吼症注意事項_0_res.json  HA-7-0010(1)_Home Care Precautions for Gypsum_0-ENG.md  HA-7-0010(1)_石膏的返家照顧注意事_0.md  HA-7-0012(1)_自我點眼藥須知_0_res.json  HA-7-0013(1)_Precautions for Hypokalemia_0-ENG.md  HA-7-0014(2)低血糖照護_0.md  HA-7-0015(1)_低油飲食衛教_0_res.json  HA-7-0017(1)_Urinary Tract Stone_0-ENG.md  HA-7-0017(1)_尿路結石_0_res.json  (+17 more)
files/: GPT討論.xlsx
vectordb/: chroma.sqlite3
vectordb/eda-hospital-en/: chroma.sqlite3
vectordb/eda-hospital-zh/: chroma.sqlite3
(+3187 files in other folders)
